k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-apollo-pod
  labels:
    name: hello-apollo
    author: ananth
spec:
  containers:
  - name: hello-apollo-app
    image: ananthrs/hello-apollo:latest
    ports:
    - containerPort: 3000
    resources:
      requests:
        memory: "10Mi"
        cpu: "3m"
      limits:
        memory: "100Mi"
        cpu: "10m"
