k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-apollo-svc
spec:
  selector:
    app: hello-apollo
  ports:
  - protocol: TCP
    port: 3000
  type: ClusterIP
